syntax = "proto3";

option go_package = "github.com/Galaxy-Railway/GGargantua/api/protobuf";

package GGargantua.v1.proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "api/proto_files/http_common.proto";
import "api/proto_files/common.proto";

message HttpsRequest {
  string Method = 1;
  string Url = 2;
  map<string, ListOfString> Headers = 3;
  map<string, string> Params = 4;
  bytes Body = 5;
  bool SkipInsecureVerify = 6;
  bytes CaCert = 7;
  bytes Cert = 8;
  bytes Key = 9;
}

message HttpsResponse {
  bytes Body = 1;
  repeated Cookie Cookies = 2;
  map<string, ListOfString> Headers = 3;
  int32 Status = 4;
  google.protobuf.Timestamp StartTime = 5;
  google.protobuf.Duration FistByteTime = 6;
  google.protobuf.Duration CompleteTime = 7;

  string Error = 8;
}